[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["MusaabShalaldeh <musaabsh65@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"
pandas = "^1.3.4"
sklearn = "^0.0"
flake8 = "^4.0.1"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
